@@ -39,7 +39,7 @@ my $build = new ModuleBuildBuilder
 		  'Archive::Tar' => '1.08',
 		  'ExtUtils::Install' => 0.30,
 		  'ExtUtils::ParseXS' => 2.02,
-		  'Pod::Text' => 0,
+		  'Pod::Readme' => 0.04,
 		  'Module::Signature' => 0.21,
 		 },
    build_requires => {
